infra/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pitflow-backend
  labels:
    app: pitflow-backend
    tags.datadoghq.com/env: "producao"
    tags.datadoghq.com/service: "pitflow-os-backend"
    tags.datadoghq.com/version: "1.0.0"
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: pitflow-backend
  template:
    metadata:
      labels:
        app: pitflow-backend
        tags.datadoghq.com/env: "producao"
        tags.datadoghq.com/service: "pitflow-os-backend"
        tags.datadoghq.com/version: "1.0.0"
      annotations:
        # Injeção do agente do datadag
        admission.datadoghq.com/java-lib.version: "latest"
    spec:
      containers:
        - name: pitflow-backend
          # O placeholder abaixo será substituído pela URL do ECR na Pipeline
          image: ${CONTAINER_IMAGE}
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "300m"
              memory: "512Mi"
            limits:
              cpu: "700m"
              memory: "1Gi"
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            failureThreshold: 15  # Tentar por até 15 * 10s = 150s total
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            periodSeconds: 15
            failureThreshold: 3
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            periodSeconds: 10
            failureThreshold: 3
            timeoutSeconds: 5
